# klook

./: .gitignore  CMakeLists.txt  Messages.sh  README  create_rpm.py  create_rpm.sh  klook.spec
dolphin-patches/: 00-behaviorsettingspage.cpp.patch  01-behaviorsettingspage.h.patch  02-CMakeLists.txt.patch  03-dolphin_generalsettings.kcfg.patch  04-dolphinitemlistview.cpp.patch  05-dolphinmainwindow.cpp.patch  06-dolphinmainwindow.h.patch  07-dolphinview.cpp.patch  08-dolphinview.h.patch  09-kfileitemlistwidget.cpp.patch  10-kfileitemlistwidget.h.patch  11-kitemlistcontroller.cpp.patch  12-kitemlistcontroller.h.patch  13-kitemlistklooktoggle.cpp.patch  14-kitemlistklooktoggle_p.h.patch  15-kitemlistview.cpp.patch  16-kitemlistview.h.patch  17-kitemlistwidget.cpp.patch  18-kitemlistwidget.h.patch  19-kstandarditemlistwidget.h.patch  dolphin-klook-space-patch.diff  dolphin-overlay-icon-patch.diff  dolphin.patch  kdebase-4.8.3-dolphin-klook-overlay-icon.patch  kdebase-4.9.0-dolphin-klook.patch
icons/: CMakeLists.txt
klook/: audio.cpp  audio.h  declarativeviewer.cpp  declarativeviewer.h  file.cpp  file.h  filemodel.cpp  filemodel.h  klook.pro  klookapp.cpp  klookapp.h  main.cpp  mimeprovider.cpp  mimeprovider.h  mimetypeimageprovider.cpp  mimetypeimageprovider.h  previewgenerator.cpp  previewgenerator.h  previewprovider.cpp  previewprovider.h  text.cpp  text.h  video.cpp  video.h  workerthread.cpp  workerthread.h
klook/locale/ru/LC_MESSAGES/: KLook.mo  KLook.po  klook.po
klook/qml/klook/: Button.qml  ControlPanel.qml  ControlPanelButton.qml  DefaultImage.qml  Delegate.qml  InfoItem.qml  PlayButton.qml  Preview.qml  ScrollBar.qml  SingleDelegate.qml  Slider.qml  main.qml
klook/translations/: klook_ru.qm  klook_ru.ts
locale/: CMakeLists.txt  extract-messages.sh
locale/it/: CMakeLists.txt  klook.po
locale/ru/: CMakeLists.txt  KLook.po  klook.po
src/: audio.cpp  audio.h  declarativeviewer.cpp  declarativeviewer.h  exifimageprovider.cpp  exifimageprovider.h  file.cpp  file.h  filemodel.cpp  filemodel.h  klookapp.cpp  klookapp.h  kpartsdeclarativeitem.cpp  kpartsdeclarativeitem.h  kpartswidget.cpp  kpartswidget.h  listitem.cpp  listitem.h  listitemcontent.cpp  listitemcontent.h  main.cpp  mimeprovider.cpp  mimeprovider.h  previewgenerator.cpp  previewgenerator.h  previewprovider.cpp  previewprovider.h  progressdeclarativeitem.cpp  progressdeclarativeitem.h  resources.qrc  rotatedimage.cpp  rotatedimage.h  text.cpp  text.h  video.cpp  video.h  workerthread.cpp  workerthread.h
src/locale/ru/LC_MESSAGES/: klook.pot
src/qml/: AudioDelegate.qml  Button.qml  ControlPanel.qml  ControlPanelButton.qml  DefaultImage.qml  Delegate.qml  FolderDelegate.qml  ImageDelegate.qml  InfoItem.qml  MimeDelegate.qml  OkularDelegate.qml  PlayButton.qml  Preview.qml  ProgressDelegate.qml  ScrollBar.qml  SingleDelegate.qml  Slider.qml  TextDelegate.qml  VideoDelegate.qml  main.qml
